[Fixed] a bug with horizontal scroll

--- a/scss/_slider.scss
+++ b/scss/_slider.scss
@@ -1,5 +1,6 @@
 .slider {
     padding-bottom: 100px;
+    overflow: hidden;
 
     &__item {
         position: relative;
